--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "threads-clone",
-    "slug": "threads-clone",
+    "name": "beautician-app",
+    "slug": "beautician-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
